[project]
name = "forge-dynamics-executive-crew"
version = "0.1.0"
description = "AI Operational Planning & Management Orchestrator for Forge Dynamics"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0",
    "litellm>=1.40.0,<1.41.0",
    "python-dotenv>=1.0",
    "stripe>=8.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
supabase = [
    "supabase>=2.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that are slow or require external credentials (deselect with -m 'not slow')",
]
